--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,6 @@
     }
   },
   "rules": {
-    "semi": "error"
-  }
+    "no-unused-vars": ["error", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }]
+}
 }
