--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,6 @@
   },
   "rules": {
     "no-unused-vars": ["error", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }],
-    "space-in-brackets": ["error", "always"],
+    "space-in-brackets": ["error", "always"]
   }
 }
