--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/vue-fontawesome": "^2.0.0",
     "core-js": "^3.6.5",
+    "path": "^0.12.7",
     "uuid": "^8.3.1",
     "vue": "^2.6.11",
-    "vuetify": "^2.2.11"
+    "vuetify": "^2.2.11",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@mdi/font": "^5.8.55",
