--- a/package.json
+++ b/package.json
@@ -17,11 +17,9 @@
     "concurrently": "^5.3.0",
     "eslint": "^7.14.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.11",
-    "uuid": "^8.3.2"
+    "mongoose": "^5.10.11"
   },
   "devDependencies": {
-    "@mdi/font": "^5.9.55",
     "nodemon": "^2.0.6"
   }
 }
